[update]hospital GUI

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,6 +85,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Press_info_page",bShift=False,bCtrl=False,bAlt=True,bCmd=False,Key=I)
 +ActionMappings=(ActionName="Press_test_combat",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Press_palse",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Press_function",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
 +AxisMappings=(AxisName="Left & Right ",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Up & Down",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Left & Right ",Scale=1.000000,Key=D)
